--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,22 +47,34 @@ jobs:
       - name: Prepare release files
         id: checksums
         run: |
-          mv artifacts/safechain-agent-darwin-amd64/safechain-agent-darwin-amd64 .
-          mv artifacts/safechain-agent-darwin-arm64/safechain-agent-darwin-arm64 .
-          mv artifacts/safechain-agent-windows-amd64/SafeChainAgent.amd64.exe .
-          mv artifacts/safechain-agent-windows-amd64/SafeChainAgent.amd64.msi .
-          mv artifacts/safechain-agent-windows-arm64/SafeChainAgent.arm64.exe .
-          mv artifacts/safechain-agent-windows-arm64/SafeChainAgent.arm64.msi .
+          mv artifacts/safechain-darwin-amd64/safechain-agent-darwin-amd64 .
+          mv artifacts/safechain-darwin-amd64/safechain-setup-darwin-amd64 .
+          mv artifacts/safechain-darwin-arm64/safechain-agent-darwin-arm64 .
+          mv artifacts/safechain-darwin-arm64/safechain-setup-darwin-arm64 .
+          mv artifacts/safechain-windows-amd64/SafeChainAgent.amd64.exe .
+          mv artifacts/safechain-windows-amd64/SafeChainSetup.amd64.exe .
+          mv artifacts/safechain-windows-amd64/SafeChainAgent.amd64.msi .
+          mv artifacts/safechain-windows-arm64/SafeChainAgent.arm64.exe .
+          mv artifacts/safechain-windows-arm64/SafeChainSetup.arm64.exe .
+          mv artifacts/safechain-windows-arm64/SafeChainAgent.arm64.msi .
           
-          DARWIN_AMD64_SHA=$(cat artifacts/safechain-agent-darwin-amd64/checksum-darwin-amd64.txt | tr -d '\n\r ')
-          DARWIN_ARM64_SHA=$(cat artifacts/safechain-agent-darwin-arm64/checksum-darwin-arm64.txt | tr -d '\n\r ')
-          WINDOWS_AMD64_SHA=$(cat artifacts/safechain-agent-windows-amd64/checksum-windows-amd64.txt | tr -d '\n\r ')
-          WINDOWS_ARM64_SHA=$(cat artifacts/safechain-agent-windows-arm64/checksum-windows-arm64.txt | tr -d '\n\r ')
+          AGENT_DARWIN_AMD64_SHA=$(cat artifacts/safechain-darwin-amd64/checksum-agent-darwin-amd64.txt | tr -d '\n\r ')
+          SETUP_DARWIN_AMD64_SHA=$(cat artifacts/safechain-darwin-amd64/checksum-setup-darwin-amd64.txt | tr -d '\n\r ')
+          AGENT_DARWIN_ARM64_SHA=$(cat artifacts/safechain-darwin-arm64/checksum-agent-darwin-arm64.txt | tr -d '\n\r ')
+          SETUP_DARWIN_ARM64_SHA=$(cat artifacts/safechain-darwin-arm64/checksum-setup-darwin-arm64.txt | tr -d '\n\r ')
+          AGENT_WINDOWS_AMD64_SHA=$(cat artifacts/safechain-windows-amd64/checksum-agent-windows-amd64.txt | tr -d '\n\r ')
+          SETUP_WINDOWS_AMD64_SHA=$(cat artifacts/safechain-windows-amd64/checksum-setup-windows-amd64.txt | tr -d '\n\r ')
+          AGENT_WINDOWS_ARM64_SHA=$(cat artifacts/safechain-windows-arm64/checksum-agent-windows-arm64.txt | tr -d '\n\r ')
+          SETUP_WINDOWS_ARM64_SHA=$(cat artifacts/safechain-windows-arm64/checksum-setup-windows-arm64.txt | tr -d '\n\r ')
           
-          echo "darwin_amd64_sha=$DARWIN_AMD64_SHA" >> $GITHUB_OUTPUT
-          echo "darwin_arm64_sha=$DARWIN_ARM64_SHA" >> $GITHUB_OUTPUT
-          echo "windows_amd64_sha=$WINDOWS_AMD64_SHA" >> $GITHUB_OUTPUT
-          echo "windows_arm64_sha=$WINDOWS_ARM64_SHA" >> $GITHUB_OUTPUT
+          echo "agent_darwin_amd64_sha=$AGENT_DARWIN_AMD64_SHA" >> $GITHUB_OUTPUT
+          echo "setup_darwin_amd64_sha=$SETUP_DARWIN_AMD64_SHA" >> $GITHUB_OUTPUT
+          echo "agent_darwin_arm64_sha=$AGENT_DARWIN_ARM64_SHA" >> $GITHUB_OUTPUT
+          echo "setup_darwin_arm64_sha=$SETUP_DARWIN_ARM64_SHA" >> $GITHUB_OUTPUT
+          echo "agent_windows_amd64_sha=$AGENT_WINDOWS_AMD64_SHA" >> $GITHUB_OUTPUT
+          echo "setup_windows_amd64_sha=$SETUP_WINDOWS_AMD64_SHA" >> $GITHUB_OUTPUT
+          echo "agent_windows_arm64_sha=$AGENT_WINDOWS_ARM64_SHA" >> $GITHUB_OUTPUT
+          echo "setup_windows_arm64_sha=$SETUP_WINDOWS_ARM64_SHA" >> $GITHUB_OUTPUT
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
@@ -70,18 +82,32 @@ jobs:
           files: |
             safechain-agent-darwin-amd64
             safechain-agent-darwin-arm64
+            safechain-setup-darwin-amd64
+            safechain-setup-darwin-arm64
             SafeChainAgent.amd64.msi
             SafeChainAgent.arm64.msi
+            SafeChainSetup.amd64.exe
+            SafeChainSetup.arm64.exe
           body: |
-            ## safechain-agent ${{ needs.extract-version.outputs.version }}
-            ### Checksums
+            ## SafeChain ${{ needs.extract-version.outputs.version }}
+            
+            ### Agent Checksums
             
             | Platform | Architecture | SHA256 |
             |----------|--------------|--------|
-            | macOS | amd64 | `${{ steps.checksums.outputs.darwin_amd64_sha }}` |
-            | macOS | arm64 | `${{ steps.checksums.outputs.darwin_arm64_sha }}` |
-            | Windows | amd64 | `${{ steps.checksums.outputs.windows_amd64_sha }}` |
-            | Windows | arm64 | `${{ steps.checksums.outputs.windows_arm64_sha }}` |
+            | macOS | amd64 | `${{ steps.checksums.outputs.agent_darwin_amd64_sha }}` |
+            | macOS | arm64 | `${{ steps.checksums.outputs.agent_darwin_arm64_sha }}` |
+            | Windows | amd64 | `${{ steps.checksums.outputs.agent_windows_amd64_sha }}` |
+            | Windows | arm64 | `${{ steps.checksums.outputs.agent_windows_arm64_sha }}` |
+            
+            ### Setup Checksums
+            
+            | Platform | Architecture | SHA256 |
+            |----------|--------------|--------|
+            | macOS | amd64 | `${{ steps.checksums.outputs.setup_darwin_amd64_sha }}` |
+            | macOS | arm64 | `${{ steps.checksums.outputs.setup_darwin_arm64_sha }}` |
+            | Windows | amd64 | `${{ steps.checksums.outputs.setup_windows_amd64_sha }}` |
+            | Windows | arm64 | `${{ steps.checksums.outputs.setup_windows_arm64_sha }}` |
           draft: false
           prerelease: false
         env:
