--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -89,4 +89,79 @@ jobs:
             AikidoAgent.${{ matrix.arch }}.exe
             checksum-windows-${{ matrix.arch }}.txt
 
-# TODO: support building proxy
+  build-windows-proxy:
+    strategy:
+      matrix:
+        include:
+          - arch: arm64
+          - target: aarch64-pc-windows-msvc
+            runner: windows-11-arm
+          - arch: amd64
+            target: x86_64-pc-windows-msvc
+            runner: windows-latest
+
+    runs-on: ${{ matrix.runner }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v5
+
+      - name: Set up Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
+
+      - name: Rust Cache
+        uses: Swatinem/rust-cache@v2
+        with:
+          env-vars: "RUST_TOOLCHAIN=stable"
+
+      - name: cargo check
+        run: |
+          cargo check -p aikido-proxy --target ${{ matrix.target }}
+      - name: clippy
+        run: |
+          cargo clippy -p aikido-proxy --target ${{ matrix.target }}
+      - name: rustfmt
+        run: |
+          cargo fmt -p aikido-proxy --check
+
+      - name: Build proxy binary for ${{ matrix.arch }}
+        run: |
+          cargo build --release -p rama-cli --target ${{ matrix.target }}
+          mv target/${{ matrix.target }}/release/aikido-proxy aikido-proxy-darwin-${{ matrix.arch }}
+
+      - name: Copy proxy binary to bin
+        run: Copy-Item -Path "target\${{ matrix.target }}\release\aikido-proxy.exe -Destination "bin\AikidoProxy.exe"
+        shell: pwsh
+
+      - name: Calculate binary checksum
+        run: |
+          $hash = (Get-FileHash -Path bin/AikidoProxy.exe -Algorithm SHA256).Hash.ToLower()
+          echo "$hash" > checksum-proxy-windows-${{ matrix.arch }}.txt
+          Write-Host "windows/proxy-${{ matrix.arch }} SHA256: $hash"
+        shell: pwsh
+
+      - name: Install WiX Toolset
+        run: dotnet tool install -g wix
+
+      - name: Add WiX UI extension
+        run: wix extension add WixToolset.UI.wixext
+
+      - name: Build MSI installer
+        run: |
+          .\packaging\windows\build-msi.ps1 -Version "${{ inputs.version || 'dev' }}" -Arch "${{ matrix.arch }}" -BinDir ".\bin" -OutputDir "."
+        shell: pwsh
+
+      - name: Prepare artifacts
+        run: |
+          Move-Item -Path bin\AikidoProxy.exe -Destination AikidoProxy.${{ matrix.arch }}.exe
+        shell: pwsh
+
+      - name: Upload Windows artifacts
+        uses: actions/upload-artifact@v6
+        with:
+          name: AikidoProxy.${{ matrix.arch }}
+          path: |
+            AikidoProxy.${{ matrix.arch }}.msi
+            AikidoProxy.${{ matrix.arch }}.exe
+            checksum-proxy-windows-${{ matrix.arch }}.txt
