--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -19,10 +19,8 @@ jobs:
       matrix:
         include:
           - arch: amd64
-            goarch: amd64
             runner: macos-14
           - arch: arm64
-            goarch: arm64
             runner: macos-14
     
     runs-on: ${{ matrix.runner }}
@@ -36,33 +34,15 @@ jobs:
           go-version: '1.21'
 
       - name: Run tests
-        run: |
-          echo "Running Go tests..."
-          go test -v ./...
+        run: make test
 
-      - name: Build binaries for ${{ matrix.arch }}
+      - name: Build binaries for darwin/${{ matrix.arch }}
+        run: make build-darwin-${{ matrix.arch }} VERSION="${{ inputs.version || 'dev' }}"
+
+      - name: Prepare artifacts
         run: |
-          VERSION="${{ inputs.version || 'dev' }}"
-          BUILD_TIME=$(date -u '+%Y-%m-%d_%H:%M:%S')
-          GIT_COMMIT=$(git rev-parse --short HEAD)
-          
-          LDFLAGS="-X 'github.com/AikidoSec/safechain-agent/internal/version.Version=$VERSION' \
-                   -X 'github.com/AikidoSec/safechain-agent/internal/version.BuildTime=$BUILD_TIME' \
-                   -X 'github.com/AikidoSec/safechain-agent/internal/version.GitCommit=$GIT_COMMIT'"
-          
-          echo "Building darwin/${{ matrix.goarch }} daemon..."
-          CGO_ENABLED=0 GOOS=darwin GOARCH=${{ matrix.goarch }} go build \
-            -ldflags "$LDFLAGS -s -w" \
-            -trimpath \
-            -o safechain-agent-darwin-${{ matrix.arch }} \
-            ./cmd/daemon
-          
-          echo "Building darwin/${{ matrix.goarch }} setup..."
-          CGO_ENABLED=0 GOOS=darwin GOARCH=${{ matrix.goarch }} go build \
-            -ldflags "$LDFLAGS -s -w" \
-            -trimpath \
-            -o safechain-setup-darwin-${{ matrix.arch }} \
-            ./cmd/setup
+          mv bin/safechain-agent-darwin-${{ matrix.arch }} safechain-agent-darwin-${{ matrix.arch }}
+          mv bin/safechain-setup-darwin-${{ matrix.arch }} safechain-setup-darwin-${{ matrix.arch }}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
