--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -19,9 +19,7 @@ jobs:
       matrix:
         include:
           - arch: amd64
-            goarch: amd64
           - arch: arm64
-            goarch: arm64
 
     runs-on: windows-latest
     steps:
@@ -34,25 +32,18 @@ jobs:
           go-version: '1.21'
 
       - name: Run tests
-        run: go test -v ./...
+        run: make test
+        shell: bash
 
       - name: Build Windows binaries for ${{ matrix.arch }}
+        run: make build-windows-${{ matrix.arch }} VERSION="${{ inputs.version || 'dev' }}"
+        shell: bash
+
+      - name: Rename binaries for packaging
         run: |
-          $VERSION = "${{ inputs.version || 'dev' }}"
-          $BUILD_TIME = (Get-Date -Format "yyyy-MM-dd_HH:mm:ss")
-          $GIT_COMMIT = git rev-parse --short HEAD
-          
-          $LDFLAGS = "-X 'github.com/AikidoSec/safechain-agent/internal/version.Version=$VERSION' -X 'github.com/AikidoSec/safechain-agent/internal/version.BuildTime=$BUILD_TIME' -X 'github.com/AikidoSec/safechain-agent/internal/version.GitCommit=$GIT_COMMIT' -s -w"
-          
-          New-Item -ItemType Directory -Force -Path bin
-          
-          $env:CGO_ENABLED = "0"
-          $env:GOOS = "windows"
-          $env:GOARCH = "${{ matrix.goarch }}"
-          
-          go build -ldflags $LDFLAGS -trimpath -o bin/SafeChainAgent.exe ./cmd/daemon
-          go build -ldflags $LDFLAGS -trimpath -o bin/SafeChainSetup.exe ./cmd/setup
-        shell: pwsh
+          mv bin/safechain-agent-windows-${{ matrix.arch }}.exe bin/SafeChainAgent.exe
+          mv bin/safechain-setup-windows-${{ matrix.arch }}.exe bin/SafeChainSetup.exe
+        shell: bash
 
       - name: Install WiX Toolset
         run: dotnet tool install -g wix
@@ -67,9 +58,9 @@ jobs:
 
       - name: Prepare artifacts
         run: |
-          Move-Item -Path bin\SafeChainAgent.exe -Destination SafeChainAgent.${{ matrix.arch }}.exe
-          Move-Item -Path bin\SafeChainSetup.exe -Destination SafeChainSetup.${{ matrix.arch }}.exe
-        shell: pwsh
+          mv bin/SafeChainAgent.exe SafeChainAgent.${{ matrix.arch }}.exe
+          mv bin/SafeChainSetup.exe SafeChainSetup.${{ matrix.arch }}.exe
+        shell: bash
 
       - name: Upload Windows artifacts
         uses: actions/upload-artifact@v4
