provide secret storage abstraction
makes it easier to use the local fs
for developer / local purposes;
end-user production use cases should however probably still use
the keyring... As that's safer. This works best however if the safechain-proxy
can be a (very) long running daemon as some platforms require the user password
to read/store a secret (e.g. MacOS)

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -43,3 +43,6 @@ jobs:
       - name: test
         run: |
           cargo test --target ${{ matrix.target }} --workspace
+      - name: integration test
+        run: |
+          cargo test --target ${{ matrix.target }} --workspace -- --ignored
