support SOCKS5(H) as well
this makes the safechain proxy capable of accepting
socks(5) next to the already HTTP(S) proxy connections

--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "safechain-proxy"
-description = "MITM SafeChain Proxy for Developer Security"
+description = "MITM SafeChain HTTP(S)/SOCKS5 Proxy for Developer Security"
 version = "0.1.0"
 edition = "2024"
 publish = false
