--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,8 +51,8 @@ jobs:
           mv artifacts/safechain-darwin-amd64/safechain-setup-darwin-amd64 .
           mv artifacts/safechain-darwin-arm64/safechain-agent-darwin-arm64 .
           mv artifacts/safechain-darwin-arm64/safechain-setup-darwin-arm64 .
-          mv artifacts/safechain-windows-amd64/SafeChainAgent.amd64.msi .
-          mv artifacts/safechain-windows-arm64/SafeChainAgent.arm64.msi .
+          mv artifacts/SafeChainAgent.amd64.msi/SafeChainAgent.amd64.msi .
+          mv artifacts/SafeChainAgent.arm64.msi/SafeChainAgent.arm64.msi .
                     
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
