--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -76,8 +76,8 @@ jobs:
 
     runs-on: ${{ matrix.runner }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+      - uses: ilammy/setup-nasm@v1
 
       - name: Set up Rust
         uses: dtolnay/rust-toolchain@master
@@ -89,6 +89,14 @@ jobs:
         uses: Swatinem/rust-cache@v2
         with:
           env-vars: "RUST_TOOLCHAIN=stable"
+
+        # https://github.com/rust-lang/cmake-rs/pull/259 breaks handling of long Windows paths
+        # https://github.com/cloudflare/boring/issues/414
+        # https://github.com/0x676e67/boring/commit/efacedb5bf409d0d773e8ce4f5080cb4b4c10f54
+      - name: Pin some dependencies, temporary patch for cmake breakage
+        if: startsWith(matrix.os, 'windows')
+        run: |
+          cargo update --package cmake --precise 0.1.54
 
       - name: cargo check
         run: cargo check -p safechain-proxy --target ${{ matrix.target }}
