--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -11,16 +11,11 @@ jobs:
     strategy:
       matrix:
         include:
-          - target: aarch64-apple-darwin
-            runner: macos-14
-          - target: x86_64-apple-darwin
-            runner: macos-14-large
-          - target: x86_64-pc-windows-msvc
-            runner: windows-latest
-          - target: aarch64-pc-windows-msvc
-            runner: windows-11-arm
-          - target: x86_64-unknown-linux-gnu
-            runner: ubuntu-latest
+          - runner: macos-15
+          - runner: macos-15-intel
+          - runner: windows-latest
+          - runner: windows-11-arm
+          - runner: ubuntu-latest
 
     runs-on: ${{ matrix.runner }}
     env:
@@ -36,13 +31,13 @@ jobs:
           env-vars: "RUST_TOOLCHAIN=stable"
       - name: check
         run: |
-          cargo check --target ${{ matrix.target }} --workspace
+          cargo check --workspace
       - name: clippy
         run: |
-          cargo clippy --target ${{ matrix.target }} --workspace
+          cargo clippy --workspace
       - name: test
         run: |
-          cargo test --target ${{ matrix.target }} --workspace
+          cargo test --workspace
       - name: integration test
         run: |
-          cargo test --target ${{ matrix.target }} --workspace -- --ignored
+          cargo test --workspace -- --ignored
