--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -9,7 +9,7 @@ resolver = "3"
 
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
-keyring = { version = "3.6", features = ["apple-native", "linux-native", "windows-native", "sync-secret-service"] }
+keyring = { version = "3.6", features = ["apple-native", "linux-native", "windows-native", "sync-secret-service", "vendored"] }
 secrecy = "0.10"
 tokio = { version = "1.48", features = ["full"] }
 serde = "1.0"
