--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -9,11 +9,21 @@ resolver = "3"
 
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
-keyring = { version = "3.6", features = ["apple-native", "linux-native", "windows-native", "sync-secret-service", "vendored"] }
+keyring-core = "0.7"
 secrecy = "0.10"
 tokio = { version = "1.48", features = ["full"] }
 serde = "1.0"
 serde_json = "1.0"
+
+[target.'cfg(target_os = "linux")'.dependencies]
+linux-keyutils-keyring-store = "0.2"
+
+[target.'cfg(target_os = "macos")'.dependencies]
+apple-native-keyring-store = { version = "0.2", features = [ "keychain" ] }
+sudo = "0.6"
+
+[target.'cfg(target_os = "windows")'.dependencies]
+windows-native-keyring-store = "0.4"
 
 [dependencies.rama]
 git = "https://github.com/plabayo/rama"
