--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -13,13 +13,13 @@ keyring-core = "0.7"
 secrecy = "0.10"
 tokio = { version = "1.48", features = ["full"] }
 serde = "1.0"
-serde_json = "1.0"
+postcard = { version = "1.1", features = ["alloc"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 linux-keyutils-keyring-store = "0.2"
 
 [target.'cfg(target_os = "macos")'.dependencies]
-apple-native-keyring-store = { version = "0.2", features = [ "keychain" ] }
+apple-native-keyring-store = { version = "0.2", features = ["keychain"] }
 sudo = "0.6"
 
 [target.'cfg(target_os = "windows")'.dependencies]
@@ -27,7 +27,7 @@ windows-native-keyring-store = "0.4"
 
 [dependencies.rama]
 git = "https://github.com/plabayo/rama"
-rev = "755c4c96a0f8ae5a19ffd5c30a00e4099368cc95"
+rev = "33ffcdcd69cc1e9a73b5d1f903f84825793f2248"
 features = ["http-full", "proxy-full", "dns", "boring"]
 
 [dev-dependencies]
