--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -7,6 +7,10 @@ publish = false
 rust-version = "1.91"
 resolver = "3"
 
+[features]
+default = ["har"]
+har = []
+
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
 keyring-core = "0.7"
