--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -11,12 +11,17 @@ resolver = "3"
 har = []
 
 [dependencies]
+arc-swap = "1.7"
 clap = { version = "4.5", features = ["derive"] }
 keyring-core = "0.7"
 secrecy = "0.10"
+semver = { version = "1.0", features = ["serde"] }
 tokio = { version = "1.48", features = ["full"] }
 serde = "1.0"
+serde_json = "1.0"
 postcard = { version = "1.1", features = ["alloc"] }
+radix_trie = "0.3"
+rand = "0.9"
 smol_str = "0.3"
 
 [target.'cfg(target_os = "linux")'.dependencies]
