--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -31,8 +31,12 @@ linux-keyutils-keyring-store = "0.2"
 apple-native-keyring-store = { version = "0.2", features = ["keychain"] }
 sudo = "0.6"
 
+[target.'cfg(target_family = "unix")'.dependencies]
+jemallocator = { package = "tikv-jemallocator", version = "0.6" }
+
 [target.'cfg(target_os = "windows")'.dependencies]
 windows-native-keyring-store = "0.4"
+mimalloc = { version = "0.1", default-features = false }
 
 [dependencies.rama]
 git = "https://github.com/plabayo/rama"
