--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -22,7 +22,7 @@ jobs:
             runner: macos-14
           - arch: arm64
             runner: macos-14
-    
+
     runs-on: ${{ matrix.runner }}
     steps:
       - name: Checkout code
@@ -31,7 +31,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.25'
+          go-version: "1.25"
 
       - name: Run tests
         run: make test
@@ -69,13 +69,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Rust
-        uses: dtolnay/rust-toolchain@master
+        uses: dtolnay/rust-toolchain@f7ccc83f9ed1e5b9c81d8a67d7ad1a747e22a561
         with:
           toolchain: stable
           targets: ${{ matrix.target }}
 
       - name: Rust Cache
-        uses: Swatinem/rust-cache@v2
+        uses: Swatinem/rust-cache@779680da715d629ac1d338a641029a2f4372abb5
         with:
           env-vars: "RUST_TOOLCHAIN=stable"
 
