--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -19,6 +19,7 @@ semver = { version = "1.0", features = ["serde"] }
 tokio = { version = "1.48", features = ["full"] }
 serde = "1.0"
 postcard = { version = "1.1", features = ["alloc"] }
+lz4_flex = "0.12"
 radix_trie = "0.3"
 rand = "0.9"
 smol_str = "0.3"
