--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -14,12 +14,14 @@ har = []
 arc-swap = "1.7"
 clap = { version = "4.5", features = ["derive"] }
 keyring-core = "0.7"
+smallvec = { version = "1.15", features = ["const_generics", "const_new"] }
 secrecy = "0.10"
 semver = { version = "1.0", features = ["serde"] }
 tokio = { version = "1.48", features = ["full"] }
 serde = "1.0"
 postcard = { version = "1.1", features = ["alloc"] }
 lz4_flex = "0.12"
+serde_test = "1"
 radix_trie = "0.3"
 rand = "0.9"
 smol_str = "0.3"
