--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -24,6 +24,7 @@ postcard = { version = "1.1", features = ["alloc"] }
 lz4_flex = "0.12"
 serde_test = "1"
 radix_trie = "0.3"
+serde_json = "1"
 rand = "0.9"
 smol_str = "0.3"
 
