--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -27,6 +27,7 @@ radix_trie = "0.3"
 serde_json = "1"
 rand = "0.9"
 smol_str = "0.3"
+percent-encoding = "2"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 linux-keyutils-keyring-store = "0.2"
