--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -26,6 +26,7 @@ radix_trie = "0.3"
 serde_json = "1"
 rand = "0.9"
 parking_lot = "0.12.5"
+serde_html_form = "0.3"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 linux-keyutils-keyring-store = "0.2"
