--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -28,6 +28,8 @@ rand = "0.9"
 smol_str = "0.3"
 parking_lot = "0.12.5"
 percent-encoding = "2"
+bytes = "1"
+http-body-util = "0.1"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 linux-keyutils-keyring-store = "0.2"
