--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -25,9 +25,8 @@ serde_test = "1"
 radix_trie = "0.3"
 serde_json = "1"
 rand = "0.9"
-smol_str = "0.3"
 parking_lot = "0.12.5"
-percent-encoding = "2"
+serde_html_form = "0.3"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 linux-keyutils-keyring-store = "0.2"
