remove symbolic link for proxy/README.md
The experience of the links isn't very nice,
when used from within the GitHub web view it seems.

So better we just drop it all together.

--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 edition = "2024"
 publish = false
 rust-version = "1.91"
+readme = "../docs/proxy.md"
 resolver = "3"
 
 [features]
