Update Windows build workflow to include ARM architecture support
- Added support for ARM architecture in the Windows build matrix by enabling the `windows-11-arm` runner.
- Updated the job configuration to reflect the inclusion of `arm64` alongside `amd64` for improved compatibility.

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -54,10 +54,9 @@ jobs:
     strategy:
       matrix:
         include:
-          # NOTE: windows-11-arm is not YET supported in private Github Action runners
-          # - arch: arm64
-          #   target: aarch64-pc-windows-msvc
-          #   runner: windows-11-arm
+          - arch: arm64
+            target: aarch64-pc-windows-msvc
+            runner: windows-11-arm
           - arch: amd64
             target: x86_64-pc-windows-msvc
             runner: windows-latest
@@ -117,6 +116,7 @@ jobs:
       matrix:
         include:
           - arch: amd64
+          - arch: arm64
 
     runs-on: windows-latest
     steps:
