--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     tags:
-      - 'v*'
+      - "v*"
 
 jobs:
   extract-version:
@@ -53,9 +53,11 @@ jobs:
           mv artifacts/SafeChainAgent.arm64.msi/SafeChainAgent.arm64.msi .
           mv artifacts/safechain-proxy-darwin-amd64/safechain-proxy-darwin-amd64 .
           mv artifacts/safechain-proxy-darwin-arm64/safechain-proxy-darwin-arm64 .
+          mv artifacts/safechain-proxy-linux-amd64/safechain-proxy-linux-amd64 .
+          mv artifacts/safechain-proxy-linux-arm64/safechain-proxy-linux-arm64 .
           mv artifacts/SafeChainProxy.amd64.exe/SafeChainProxy.amd64.exe .
           mv artifacts/SafeChainProxy.arm64.exe/SafeChainProxy.arm64.exe .
-                    
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
@@ -64,5 +66,7 @@ jobs:
             safechain-agent-darwin-arm64
             safechain-proxy-darwin-amd64
             safechain-proxy-darwin-arm64
+            safechain-proxy-linux-amd64
+            safechain-proxy-linux-arm64
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
