--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -63,8 +63,8 @@ jobs:
             runner: macos-14
             os: darwin
           - arch: amd64
-            target: x86_64-unknown-linux-musl
-            runner: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+            runner: ubuntu-22.04
             os: linux
 
     runs-on: ${{ matrix.runner }}
@@ -77,10 +77,6 @@ jobs:
         with:
           toolchain: stable
           targets: ${{ matrix.target }}
-
-      - name: Install musl tools
-        if: contains(matrix.target, 'musl')
-        run: sudo apt-get update && sudo apt-get install -y musl-tools
 
       - name: Install cross-compilation tools (Linux ARM64)
         if: matrix.os == 'linux' && matrix.arch == 'arm64'
