--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -63,8 +63,8 @@ jobs:
             runner: macos-14
             os: darwin
           - arch: amd64
-            target: x86_64-unknown-linux-gnu
-            runner: ubuntu-22.04
+            target: x86_64-unknown-linux-musl
+            runner: ubuntu-latest
             os: linux
 
     runs-on: ${{ matrix.runner }}
@@ -77,12 +77,6 @@ jobs:
         with:
           toolchain: stable
           targets: ${{ matrix.target }}
-
-      - name: Install cross-compilation tools (Linux ARM64)
-        if: matrix.os == 'linux' && matrix.arch == 'arm64'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gcc-aarch64-linux-gnu
 
       - name: Rust Cache
         uses: Swatinem/rust-cache@779680da715d629ac1d338a641029a2f4372abb5
@@ -102,8 +96,6 @@ jobs:
       - name: Build proxy binary for ${{ matrix.os }}/${{ matrix.arch }}
         run: |
           cargo build --release -p safechain-proxy --target ${{ matrix.target }}
-        env:
-          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
 
       - name: Prepare artifacts
         run: |
