--- a/.github/workflows/build-macos-pkg.yml
+++ b/.github/workflows/build-macos-pkg.yml
@@ -50,10 +50,42 @@ jobs:
           ls -lh bin/safechain-agent-darwin-${{ matrix.arch }}
           ls -lh bin/safechain-proxy-darwin-${{ matrix.arch }}
 
+      # --- macOS signing + notarization (no entitlements for CLI) ---
+      - name: Import macOS certificate
+        env:
+          MACOS_CERTIFICATE_P12: ${{ secrets.MACOS_CERTIFICATE_P12 }}
+          MACOS_CERTIFICATE_PASSWORD: ${{ secrets.MACOS_CERTIFICATE_PASSWORD }}
+          MACOS_INSTALLER_CERTIFICATE_P12: ${{ secrets.MACOS_INSTALLER_CERTIFICATE_P12 }}
+        run: .github/scripts/macos/core/import-certificate.sh
+
+      - name: Sign macOS agent binary
+        env:
+          DEV_ID_SHA: ${{ env.DEV_ID_SHA }}
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
+        run: .github/scripts/macos/core/sign-binary.sh bin/safechain-agent-darwin-${{ matrix.arch }}
+
+      - name: Sign macOS proxy binary
+        env:
+          DEV_ID_SHA: ${{ env.DEV_ID_SHA }}
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
+        run: .github/scripts/macos/core/sign-binary.sh bin/safechain-proxy-darwin-${{ matrix.arch }}
+
       - name: Build distribution .pkg installer
         run: |
           cd packaging/macos
           ./build-distribution-pkg.sh -v "${{ inputs.version || 'dev' }}" -a "${{ matrix.arch }}" -b "../../bin" -o "../../dist"
+
+      - name: Create and notarize macOS packages
+        env:
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_APP_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
+          DEV_ID_SHA: ${{ env.DEV_ID_SHA }}
+          DEV_ID_INSTALLER_SHA: ${{ env.DEV_ID_INSTALLER_SHA }}
+          KEYCHAIN_PATH: ${{ env.KEYCHAIN_PATH }}
+          VERSION: ${{ inputs.version }}
+          BUILD_NUMBER: ${{ github.run_number }}
+        run: .github/scripts/macos/packages/sign-and-notarize-package.sh dist/SafeChainAgent-${{ inputs.version || 'dev' }}-${{ matrix.arch }}.pkg
 
       - name: Upload .pkg artifact
         uses: actions/upload-artifact@v4
