Add executable permission to macOS scripts in workflow
- Updated the GitHub Actions workflow to include a step that makes all macOS scripts executable.
- This change ensures that the scripts can run without permission issues during the build process.

--- a/.github/workflows/build-macos-pkg.yml
+++ b/.github/workflows/build-macos-pkg.yml
@@ -50,7 +50,10 @@ jobs:
           ls -lh bin/safechain-agent-darwin-${{ matrix.arch }}
           ls -lh bin/safechain-proxy-darwin-${{ matrix.arch }}
 
-      # --- macOS signing + notarization (no entitlements for CLI) ---
+      - name: Make scripts executable
+        run: chmod +x .github/scripts/macos/**/*.sh
+      
+        # --- macOS signing + notarization (no entitlements for CLI) ---
       - name: Import macOS certificate
         env:
           MACOS_CERTIFICATE_P12: ${{ secrets.MACOS_CERTIFICATE_P12 }}
