--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -99,11 +99,11 @@ jobs:
           env-vars: "RUST_TOOLCHAIN=stable"
 
       - name: Build proxy binary for linux musl
-        if: contains(matrix.target, 'unknown-linux-musl')
+        if: ${{ contains(matrix.target, 'unknown-linux-musl') }}
         run: cargo zigbuild --release -p safechain-proxy --target "${{ matrix.target.name }}"
 
       - name: Build proxy binary for ${{ matrix.os }}/${{ matrix.arch }}
-        if: !(contains(matrix.target, 'unknown-linux-musl'))
+        if: ${{ !(contains(matrix.target, 'unknown-linux-musl')) }}
         run: cargo build --release -p safechain-proxy --target ${{ matrix.target }}
 
       - name: Prepare artifacts
